lab3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing
spec:
  rules:
    - http:
        paths:
          - path: /consume
            pathType: Prefix
            backend:
              service:
                name: consumer-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: producer-service
                port:
                  number: 8080
